<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NavigationBar.EditProfile">

    <ImageButton
        android:id="@+id/user_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        android:elevation="1dp"
        android:contentDescription="@string/user_profile_picture"
        android:src="@drawable/user_profile_105"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:id="@+id/userName_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="9"
        android:hint="@string/first_name"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/userName_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:ems="9"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/userName_first"
        app:layout_constraintTop_toTopOf="@id/userName_first"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/userPhone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number"
        android:ems="9"
        android:textSize="18sp"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName_first"
        />


    <EditText
        android:id="@+id/userEmail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email_address"
        android:ems="9"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/userName_last"/>

    <Button
        android:id="@+id/save_user_profile_btn"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmail_text" />



</androidx.constraintlayout.widget.ConstraintLayout>