<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.PasswordReset.PasswordResetThroughEmailFragment">

    <ImageView
        android:id="@+id/cogwheel_img"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/cogwheel_orange_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/jenga_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenga"
        android:textColor="@color/orange_500"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cogwheel_img"
        />

    <EditText
        android:id="@+id/pwordResetEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jenga_txt" />

    <Button
        android:id="@+id/password_reset_email_button"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/orange_500"
        android:text="@string/send_email_reset_link"
        android:textAllCaps="false"
        app:cornerRadius="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwordResetEmailAddress"
        />
</androidx.constraintlayout.widget.ConstraintLayout>