<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationBar.PostListingFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:elevation="5dp"
                android:src="@drawable/ic_home" />

            <EditText
                android:id="@+id/listingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:hint="@string/listing_title"
                android:padding="15dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/listingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:hint="@string/listing_description"
                android:padding="15dp" />

            <Button
                android:id="@+id/postButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="16dp" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>